Agregar saludo desde feature/saludo

--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
   <body>
     <h1>Hola Mundo desde SourceTree</h1>
     <p>Primer archivo añadido al repo.</p>
+    <p>Saludo desde la rama feature/saludo</p>
   </body>
 </html>
